--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ sourceSets {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'engine.Core'
+        attributes 'Main-Class': 'engine.Score'
     }
 }
 
